--- a/Academy2018_.NET_Homework4.API/Academy2018_.NET_Homework4.API.csproj
+++ b/Academy2018_.NET_Homework4.API/Academy2018_.NET_Homework4.API.csproj
@@ -10,10 +10,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Academy2018_.NET_Homework4.Core\Academy2018_.NET_Homework4.Core.csproj" />
+    <ProjectReference Include="..\Academy2018_.NET_Homework4.Infrastructure\Academy2018_.NET_Homework4.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
