--- a/Academy2018_.NET_Homework4.API/Properties/launchSettings.json
+++ b/Academy2018_.NET_Homework4.API/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/departures",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "Academy2018_.NET_Homework4.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/departures",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
