Almost completed. Created entity configurations

--- a/Academy2018_.NET_Homework4.API/appsettings.json
+++ b/Academy2018_.NET_Homework4.API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "AirportDB": "Server=(localdb)\\MSSQLLocalDB;Database=AirportDB;Trusted_Connection=True;Integrated Security=True;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
