--- a/Academy2018_.NET_Homework5.Tests/Academy2018_.NET_Homework5.Tests.csproj
+++ b/Academy2018_.NET_Homework5.Tests/Academy2018_.NET_Homework5.Tests.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="4.7.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Academy2018_.NET_Homework4.Core\Academy2018_.NET_Homework5.Core.csproj" />
+    <ProjectReference Include="..\Academy2018_.NET_Homework4.Shared\Academy2018_.NET_Homework5.Shared.csproj" />
   </ItemGroup>
 
 </Project>
